
An entry should be made for _every_ commit to the repository.
The entries in this file will be used when creating the README
for new versions, so keep that in mind when writing the
description.

The form of an entry should be:

Name: 
Date: yyyy/mm/dd
Tag: <post-commit CVS tag>
Description:

----------------------------------------------------------------------
Name: John Reppy
Date: 2006/04/14
Tag: 
Description:

MLRISC changes:
  1) renamed GAS_PSEUDO_OPS to AS_PSEUDO_OPS and put it in its own file.
  2) added support for NOTB and XORB operators in pseudo-op expressions
  3) added DarwinPseudoOp functor that supports Darwin's assembler syntax.
  4) added support for 64-bit integer literals

----------------------------------------------------------------------
Name: Matthias Blume (http://www.tti-c.org/blume/)
Date: yyyy/mm/dd
Tag: Release_110_58
Description:

New working version (110.58).  NEW BOOTFILES!

----------------------------------------------------------------------
Name: Matthias Blume (http://www.tti-c.org/blume/)
Date: 2006/03/01 22:15:00 CST
Tag: blume-20060301-lexgen
Description:

Incorporated several bugfixes to lexgen.  Compiler now compiles to
fixpoint when using lexgen instead of ml-lex.

----------------------------------------------------------------------
Name: Matthias Blume (http://www.tti-c.org/blume/)
Date: 2006/02/28 22:45:00 CST
Tag: blume-20060228-lexgen
Description:

Removed ml-flex and added lexgen instead, using Aaron Turon's newly
provided tarball.  The generated lexers still have problems.

----------------------------------------------------------------------
Name: Matthias Blume (http://www.tti-c.org/blume/)
Date: 2006/02/26 23:30:00 CST
Tag: blume-20060226-ml-flex
Description:

Removed ml-flex' dependency on regexp-lib.cm.  Turned installation
of ml-flex on by default.

----------------------------------------------------------------------
Name: Matthias Blume (http://www.tti-c.org/blume/)
Date: 2006/02/24 16:30:00 CST