@@ -324,6 +324,12 @@ else
 	if [ -f runx.$ARCH-$OPSYS ]; then
 	    mv runx.$ARCH-$OPSYS "$RUNDIR"
 	fi
+	if [ -f run.$ARCH-$OPSYS.so ]; then
+	    mv run.$ARCH-$OPSYS.so "$RUNDIR"
+	fi
+	if [ -f run.$ARCH-$OPSYS.a ]; then
+	    mv run.$ARCH-$OPSYS.a "$RUNDIR"
+	fi
 	$MAKE MAKE=$MAKE clean
     else
 	complain "$this: !!! Run-time system build failed for some reason."
