@@ -13,6 +13,15 @@ Tag: <post-commit CVS tag>
 Description:
 
 ----------------------------------------------------------------------
+Name: Matthias Blume (http://www.tti-c.org/blume/)
+Date: 2006/04/20 10:30:00 CDT
+Tag: blume-20060420-heap2exec
+Description:
+
+Committed patches received from Johannes 5 Joemann (joemann@befree.free.de)
+that enable heap2exec under Linux and FreeBSD.
+
+----------------------------------------------------------------------
 Name: John Reppy
 Date: 2006/04/14
 Tag: 
